--- a/index.html
+++ b/index.html
@@ -1,386 +1,81 @@
-<!DOCTYPE html>
-<html lang="zh-Hant">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>崇武道館 TDS分館 尚武道館</title>
-  <meta name="description" content="挑戰極限 站上榮耀舞台 從道館到國際賽場 專業培訓 堅持自律 成就榮耀" />
-  <meta property="og:title" content="崇武道館 TDS分館 尚武道館" />
-  <meta property="og:description" content="專業培訓 堅持自律 成就榮耀" />
-  <meta property="og:image" content="100.jpg" />
-  <meta name="theme-color" content="#111111" />
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    .text-gold{background:linear-gradient(90deg,#e9d27b,#f1c40f,#d4af37);-webkit-background-clip:text;background-clip:text;color:transparent}
-    .card{border-radius:1rem;border:1px solid rgb(229 231 235)}
-    .playhint{position:absolute;inset:0;display:flex;align-items:center;justify-content:center}
-    .playhint>span{background:rgba(0,0,0,.45);color:#fff;border-radius:.5rem;padding:.25rem .5rem;font-size:.875rem}
-    video, iframe{display:block;width:100%;height:100%;object-fit:cover}
-  </style>
-</head>
-<body class="bg-white text-gray-900">
-  <!-- Header -->
-  <header class="sticky top-0 z-50 bg-white/85 backdrop-blur border-b">
-    <div class="max-w-7xl mx-auto h-14 px-4 flex items-center justify-between">
-      <a class="font-extrabold tracking-wide">崇武 TDS 尚武</a>
-      <nav class="hidden md:flex items-center gap-6">
-        <a href="#coaches" class="hover:underline">師資</a>
-        <a href="#highlights" class="hover:underline">實力亮點</a>
-        <a href="#branches" class="hover:underline">分館介紹</a>
-        <a href="#courses" class="hover:underline">課程</a>
-        <a href="#contact" class="px-4 py-2 rounded-xl bg-black text-white">預約試上</a>
-      </nav>
-      <a href="#contact" class="md:hidden text-sm underline">預約</a>
-    </div>
-  </header>
 
-  <!-- Hero -->
-  <section class="relative overflow-hidden">
-    <div class="absolute inset-0">
-      <img src="100.jpg" alt="崇武道館 總館" class="w-full h-full object-cover" />
-      <div class="absolute inset-0 bg-black/60"></div>
-    </div>
-    <div class="relative max-w-7xl mx-auto px-4 py-16 md:py-24 grid md:grid-cols-2 gap-8 items-center">
-      <div>
-        <h1 class="text-3xl md:text-6xl font-extrabold leading-tight text-white">
-          挑戰極限 站上 <span class="text-gold">榮耀</span> 舞台
-        </h1>
-        <p class="mt-4 text-gray-100 text-lg">從道館到國際賽場 專業培訓 堅持自律 成就榮耀</p>
-        <div class="mt-6 flex flex-wrap gap-3">
-          <a href="#contact" class="px-5 py-3 rounded-xl bg-white text-black font-semibold">立即預約試上</a>
-          <a href="https://line.me/" class="px-5 py-3 rounded-xl border border-white text-white">加入 LINE 諮詢</a>
-        </div>
-      </div>
-    </div>
-  </section>
 
-  <!-- 師資與經歷：單框＋下拉切換教練影片 -->
-  <section class="max-w-3xl mx-auto px-4 py-12" id="coaches">
-    <h2 class="text-2xl font-bold mb-6">師資與經歷</h2>
+<!-- 師資與經歷：單框＋下拉切換教練影片 -->
+<section class="max-w-3xl mx-auto px-4 py-12" id="coaches">
+  <h2 class="text-2xl font-bold mb-6">師資與經歷</h2>
 
-    <div class="card overflow-hidden">
-      <!-- 標題列與下拉選單 -->
-      <div class="p-4 border-b flex flex-col sm:flex-row gap-3 sm:items-center sm:justify-between">
-        <div class="font-semibold">請選擇教練</div>
-        <div class="flex items-center gap-2">
-          <label for="coachSelect" class="text-sm text-gray-600">教練</label>
-          <select id="coachSelect" class="p-2 rounded-xl border">
-            <option value="" selected>— 請選擇 —</option>
-            <option value="孫總">孫總</option>
-            <option value="羅志峰教練">羅志峰教練</option>
-            <option value="戴教練">戴教練</option>
-            <option value="黃教練">黃教練</option>
-            <option value="粘教練">粘教練</option>
-          </select>
-        </div>
-      </div>
-
-      <!-- 影片框 -->
-      <div class="relative bg-black aspect-video">
-        <iframe
-          id="coachIframe"
-          class="w-full h-full hidden"
-          src=""
-          title="師資介紹"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-          referrerpolicy="strict-origin-when-cross-origin">
-        </iframe>
-
-        <!-- 暫無影片占位 -->
-        <div id="coachPlaceholder" class="absolute inset-0 flex flex-col items-center justify-center gap-3 text-center px-4">
-          <img src="101.jpg" alt="師資占位圖" class="w-40 h-24 object-cover rounded-lg opacity-70 hidden sm:block">
-          <p class="text-white/90 text-lg font-semibold">尚未選擇教練或此教練影片尚未上傳</p>
-          <p class="text-white/70 text-sm">請於上方選擇教練名稱即可播放對應影片</p>
-        </div>
-      </div>
-
-      <div class="p-4 text-sm text-gray-600">
-        管理教學影片 請在下方設定中替換各教練的 YouTube 連結
+  <div class="card overflow-hidden">
+    <!-- 標題列與下拉選單 -->
+    <div class="p-4 border-b flex flex-col sm:flex-row gap-3 sm:items-center sm:justify-between">
+      <div class="font-semibold">請選擇教練</div>
+      <div class="flex items-center gap-2">
+        <label for="coachSelect" class="text-sm text-gray-600">教練</label>
+        <select id="coachSelect" class="p-2 rounded-xl border">
+          <option value="" selected>— 請選擇 —</option>
+          <option value="孫總">孫總</option>
+          <option value="羅志峰教練">羅志峰教練</option>
+          <option value="戴教練">戴教練</option>
+          <option value="黃教練">黃教練</option>
+          <option value="粘教練">粘教練</option>
+        </select>
       </div>
     </div>
 
-    <script>
-      // 教練 → 影片連結設定
-      // ★ 已將你提供的連結放在「羅志峰教練」
-      const coachVideos = {
-        "孫總": "",
-        "羅志峰教練": "https://www.youtube-nocookie.com/embed/r1KgVllEFL8?rel=0&modestbranding=1",
-        "戴教練": "",
-        "黃教練": "",
-        "粘教練": ""
-      };
+    <!-- 影片框 -->
+    <div class="relative bg-black aspect-video">
+      <iframe
+        id="coachIframe"
+        class="w-full h-full hidden"
+        src=""
+        title="師資介紹"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen
+        referrerpolicy="strict-origin-when-cross-origin">
+      </iframe>
 
-      const coachSelect = document.getElementById('coachSelect');
-      const coachIframe = document.getElementById('coachIframe');
-      const coachPlaceholder = document.getElementById('coachPlaceholder');
-
-      function showCoachVideo(name) {
-        const url = coachVideos[name] || "";
-        if (url) {
-          coachIframe.src = url;
-          coachIframe.classList.remove('hidden');
-          coachPlaceholder.classList.add('hidden');
-        } else {
-          coachIframe.src = "";
-          coachIframe.classList.add('hidden');
-          coachPlaceholder.classList.remove('hidden');
-        }
-      }
-
-      coachSelect.addEventListener('change', (e) => {
-        showCoachVideo(e.target.value);
-      });
-    </script>
-  </section>
-
-  <!-- 我們的實力：年資簡介｜教練團影片｜大合照 -->
-  <section class="max-w-7xl mx-auto px-4 py-12" id="highlights">
-    <h2 class="text-2xl font-bold mb-6">我們的實力</h2>
-    <div class="grid gap-6 md:grid-cols-3">
-      <!-- 1) 崇武道館年資簡介 -->
-      <figure class="card overflow-hidden bg-white">
-        <div class="p-6">
-          <div class="text-sm text-gray-500 mb-1">🏆 崇武道館年資簡介</div>
-          <h3 class="font-semibold">穩健傳承 專注培訓</h3>
-          <ul class="mt-3 text-gray-700 text-sm space-y-1">
-            <li>創館年資 長期深耕在地</li>
-            <li>完整晉級制度 與比賽歷練</li>
-            <li>學員從啟蒙到競技的成長路徑清楚</li>
-          </ul>
-        </div>
-      </figure>
-
-      <!-- 2) 金牌教練團 影片 -->
-      <figure class="card overflow-hidden bg-black">
-        <div class="relative aspect-video">
-          <video
-            src="video_coaches.mp4"
-            poster="102.jpg"
-            muted controls playsinline preload="metadata"></video>
-          <button class="playhint" aria-label="播放或暫停"
-            onclick="const v=this.previousElementSibling; if(v.paused){v.play();}else{v.pause();}">
-            <span>點擊播放 暫停</span>
-          </button>
-        </div>
-        <figcaption class="p-4 text-white">
-          <div class="text-sm text-white/80 mb-1">🥇 金牌教練團</div>
-          <h3 class="font-semibold">系統化訓練 精準分組指導</h3>
-          <p class="text-white/80 text-sm mt-1">每位學員都能被看見 都能獲得回饋</p>
-        </figcaption>
-      </figure>
-
-      <!-- 3) 進擊肯定 大合照 -->
-      <figure class="card overflow-hidden bg-white">
-        <div class="relative aspect-video">
-          <img src="103.jpg" alt="進擊肯定 大合照" class="w-full h-full object-cover" loading="lazy" />
-        </div>
-        <figcaption class="p-4">
-          <div class="text-sm text-gray-500 mb-1">📈 進擊肯定</div>
-          <h3 class="font-semibold">團隊榮耀 一起前進</h3>
-          <p class="text-gray-600 text-sm mt-1">舞台與訓練相互印證 凝聚成長</p>
-        </figcaption>
-      </figure>
+      <!-- 占位：改成 100.jpg -->
+      <div id="coachPlaceholder" class="absolute inset-0 flex flex-col items-center justify-center gap-3 text-center px-4">
+        <img src="100.jpg" alt="師資占位圖" class="w-40 h-24 object-cover rounded-lg opacity-80 hidden sm:block">
+        <p class="text-white/90 text-lg font-semibold">尚未選擇教練或此教練影片尚未上傳</p>
+        <p class="text-white/70 text-sm">請於上方選擇教練名稱即可播放對應影片</p>
+      </div>
     </div>
-  </section>
 
-  <!-- 分館介紹 三館皆影片 文字不變 -->
-  <section class="max-w-7xl mx-auto px-4 py-12" id="branches">
-    <h2 class="text-2xl font-bold mb-6">分館介紹</h2>
-    <div class="grid md:grid-cols-3 gap-6">
-      <!-- 崇武 總館 -->
-      <article class="card p-0 overflow-hidden">
-        <div class="relative aspect-video bg-black">
-          <video src="video_chongwu.mp4" poster="101.jpg" muted controls playsinline preload="metadata"></video>
-          <button class="playhint" aria-label="播放或暫停"
-            onclick="const v=this.previousElementSibling; if(v.paused){v.play();}else{v.pause();}">
-            <span>點擊播放 暫停</span>
-          </button>
-        </div>
-        <div class="p-6">
-          <h3 class="font-bold">崇武道館 總館</h3>
-          <p class="mt-2 text-gray-600">核心訓練中心 品勢 對練 幼兒 初級進階</p>
-          <div class="mt-3 text-sm text-gray-500">地址 電話 LINE 請替換</div>
-        </div>
-      </article>
-
-      <!-- TDS 分館 -->
-      <article class="card p-0 overflow-hidden">
-        <div class="relative aspect-video bg-black">
-          <video src="video_tds.mp4" poster="102.jpg" muted controls playsinline preload="metadata"></video>
-          <button class="playhint" aria-label="播放或暫停"
-            onclick="const v=this.previousElementSibling; if(v.paused){v.play();}else{v.pause();}">
-            <span>點擊播放 暫停</span>
-          </button>
-        </div>
-        <div class="p-6">
-          <h3 class="font-bold">TDS 分館</h3>
-          <p class="mt-2 text-gray-600">自由品勢 公品 跆舞專門訓練</p>
-          <div class="mt-3 text-sm text-gray-500">地址 電話 LINE 請替換</div>
-        </div>
-      </article>
-
-      <!-- 尚武 -->
-      <article class="card p-0 overflow-hidden">
-        <div class="relative aspect-video bg-black">
-          <video src="video_shangwu.mp4" poster="103.jpg" muted controls playsinline preload="metadata"></video>
-          <button class="playhint" aria-label="播放或暫停"
-            onclick="const v=this.previousElementSibling; if(v.paused){v.play();}else{v.pause();}">
-            <span>點擊播放 暫停</span>
-          </button>
-        </div>
-        <div class="p-6">
-          <h3 class="font-bold">尚武道館</h3>
-          <p class="mt-2 text-gray-600">初級與啟蒙課程 幼兒 初級 基礎品勢</p>
-          <div class="mt-3 text-sm text-gray-500">地址 電話 LINE 諮詢請替換</div>
-        </div>
-      </article>
+    <div class="p-4 text-sm text-gray-600">
+      管理教學影片 請在下方設定中替換各教練的 YouTube 連結
     </div>
-  </section>
-
-  <!-- 課程介紹 每張可放影片或照片 -->
-  <section class="max-w-7xl mx-auto px-4 py-12" id="courses">
-    <h2 class="text-2xl font-bold mb-6">課程介紹</h2>
-    <div class="md:grid md:grid-cols-3 md:gap-6 overflow-x-auto md:overflow-visible flex gap-4 snap-x">
-
-      <!-- 品勢班 影片示例 -->
-      <article class="card min-w-[260px] md:min-w-0 snap-start overflow-hidden">
-        <div class="relative aspect-video bg-black">
-          <video src="course_poomsae.mp4" poster="101.jpg" muted controls playsinline preload="metadata"></video>
-          <button class="playhint" aria-label="播放或暫停"
-            onclick="const v=this.previousElementSibling; if(v.paused){v.play();}else{v.pause();}">
-            <span>點擊播放 暫停</span>
-          </button>
-        </div>
-        <div class="p-5">
-          <h3 class="font-bold">品勢班</h3>
-          <p class="mt-2 text-gray-600">基本功與套路扎根 穩定輸出表現力</p>
-          <div class="mt-3 flex flex-wrap gap-2 text-xs">
-            <span class="px-2 py-1 rounded bg-gray-100">崇武</span>
-            <span class="px-2 py-1 rounded bg-gray-100">尚武</span>
-          </div>
-        </div>
-      </article>
-
-      <!-- 對練班 照片示例 -->
-      <article class="card min-w-[260px] md:min-w-0 snap-start overflow-hidden">
-        <div class="relative aspect-video">
-          <img src="101.jpg" alt="對練" class="w-full h-full object-cover" loading="lazy" />
-        </div>
-        <div class="p-5">
-          <h3 class="font-bold">對練班</h3>
-          <p class="mt-2 text-gray-600">競技技術與比賽戰術 臨場反應訓練</p>
-          <div class="mt-3 flex flex-wrap gap-2 text-xs">
-            <span class="px-2 py-1 rounded bg-gray-100">崇武</span>
-          </div>
-        </div>
-      </article>
-
-      <!-- 自由品勢 影片示例 -->
-      <article class="card min-w-[260px] md:min-w-0 snap-start overflow-hidden">
-        <div class="relative aspect-video bg-black">
-          <video src="course_freestyle.mp4" poster="102.jpg" muted controls playsinline preload="metadata"></video>
-          <button class="playhint" aria-label="播放或暫停"
-            onclick="const v=this.previousElementSibling; if(v.paused){v.play();}else{v.pause();}">
-            <span>點擊播放 暫停</span>
-          </button>
-        </div>
-        <div class="p-5">
-          <h3 class="font-bold">自由品勢</h3>
-          <p class="mt-2 text-gray-600">創意與音樂融合 展現難度與美感</p>
-          <div class="mt-3 flex flex-wrap gap-2 text-xs">
-            <span class="px-2 py-1 rounded bg-gray-100">TDS</span>
-          </div>
-        </div>
-      </article>
-
-      <!-- 跆舞班 影片示例 -->
-      <article class="card min-w-[260px] md:min-w-0 snap-start overflow-hidden">
-        <div class="relative aspect-video bg-black">
-          <video src="course_ktaedance.mp4" poster="102.jpg" muted controls playsinline preload="metadata"></video>
-          <button class="playhint" aria-label="播放或暫停"
-            onclick="const v=this.previousElementSibling; if(v.paused){v.play();}else{v.pause();}">
-            <span>點擊播放 暫停</span>
-          </button>
-        </div>
-        <div class="p-5">
-          <h3 class="font-bold">跆舞班</h3>
-          <p class="mt-2 text-gray-600">節奏與武術表演 舞台自信養成</p>
-          <div class="mt-3 flex flex-wrap gap-2 text-xs">
-            <span class="px-2 py-1 rounded bg-gray-100">TDS</span>
-            <span class="px-2 py-1 rounded bg-gray-100">崇武</span>
-          </div>
-        </div>
-      </article>
-
-      <!-- 初級班 照片示例 -->
-      <article class="card min-w-[260px] md:min-w-0 snap-start overflow-hidden">
-        <div class="relative aspect-video">
-          <img src="103.jpg" alt="初級班" class="w-full h-full object-cover" loading="lazy" />
-        </div>
-        <div class="p-5">
-          <h3 class="font-bold">初級班</h3>
-          <p class="mt-2 text-gray-600">零基礎友善 動作分解與安全觀念</p>
-          <div class="mt-3 flex flex-wrap gap-2 text-xs">
-            <span class="px-2 py-1 rounded bg-gray-100">尚武</span>
-          </div>
-        </div>
-      </article>
-
-      <!-- 幼兒班 照片示例 -->
-      <article class="card min-w-[260px] md:min-w-0 snap-start overflow-hidden">
-        <div class="relative aspect-video">
-          <img src="103.jpg" alt="幼兒班" class="w-full h-full object-cover" loading="lazy" />
-        </div>
-        <div class="p-5">
-          <h3 class="font-bold">幼兒班</h3>
-          <p class="mt-2 text-gray-600">啟蒙專注力與協調性 快樂學習</p>
-          <div class="mt-3 flex flex-wrap gap-2 text-xs">
-            <span class="px-2 py-1 rounded bg-gray-100">尚武</span>
-          </div>
-        </div>
-      </article>
-
-    </div>
-  </section>
-
-  <!-- 聯絡表單 -->
-  <section class="max-w-3xl mx-auto px-4 py-12" id="contact">
-    <h2 class="text-2xl font-bold mb-4">預約免費試上</h2>
-    <form class="grid md:grid-cols-2 gap-4" onsubmit="event.preventDefault(); alert('已收到 教練將於 24 小時內與您聯繫');">
-      <input required class="p-3 rounded-xl border" placeholder="家長姓名" />
-      <input required class="p-3 rounded-xl border" placeholder="聯絡電話" />
-      <input class="p-3 rounded-xl border md:col-span-2" placeholder="學生姓名 年齡" />
-      <select class="p-3 rounded-xl border">
-        <option>想體驗的課程</option>
-        <option>品勢班</option><option>對練班</option><option>自由品勢</option>
-        <option>跆舞班</option><option>初級班</option><option>幼兒班</option>
-      </select>
-      <select class="p-3 rounded-xl border">
-        <option>偏好館別</option>
-        <option>崇武</option><option>TDS</option><option>尚武</option>
-      </select>
-      <textarea class="p-3 rounded-xl border md:col-span-2" rows="4" placeholder="備註"></textarea>
-      <button class="p-3 rounded-xl bg-black text-white md:col-span-2">送出</button>
-    </form>
-    <div class="mt-6 flex flex-wrap gap-3">
-      <a href="https://line.me/" class="px-5 py-3 rounded-xl border">加入 LINE 諮詢</a>
-      <a href="tel:02-0000-0000" class="px-5 py-3 rounded-xl border">撥打電話</a>
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="mt-12 border-t">
-    <div class="max-w-7xl mx-auto px-4 py-8 text-sm text-gray-600">
-      © 崇武道館 TDS分館 尚武道館 北投 02-XXXX-XXXX
-    </div>
-  </footer>
-
-  <!-- 手機固定底部 CTA -->
-  <div class="md:hidden fixed bottom-0 left-0 right-0 bg-white/90 backdrop-blur border-t p-3 flex gap-3">
-    <a href="#contact" class="flex-1 p-3 rounded-xl bg-black text-white text-center">預約試上</a>
-    <a href="https://line.me/" class="flex-1 p-3 rounded-xl border text-center">LINE 諮詢</a>
   </div>
-</body>
-</html>
+
+  <script>
+    // 教練 → 影片連結設定
+    const coachVideos = {
+      "孫總": "",
+      "羅志峰教練": "https://www.youtube-nocookie.com/embed/r1KgVllEFL8?rel=0&modestbranding=1",
+      "戴教練": "",
+      "黃教練": "",
+      "粘教練": ""
+    };
+
+    const coachSelect = document.getElementById('coachSelect');
+    const coachIframe = document.getElementById('coachIframe');
+    const coachPlaceholder = document.getElementById('coachPlaceholder');
+
+    function showCoachVideo(name) {
+      const url = coachVideos[name] || "";
+      if (url) {
+        coachIframe.src = url;
+        coachIframe.classList.remove('hidden');
+        coachPlaceholder.classList.add('hidden');
+      } else {
+        coachIframe.src = "";
+        coachIframe.classList.add('hidden');
+        coachPlaceholder.classList.remove('hidden');
+      }
+    }
+
+    coachSelect.addEventListener('change', (e) => {
+      showCoachVideo(e.target.value);
+    });
+  </script>
+</section>
