--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
   </section>
 
-  <!-- 師資與經歷：單框＋下拉切換教練影片 -->
+  <!-- 師資與經歷：單框＋下拉切換教練影片  初始顯示 100.jpg 填滿 -->
   <section class="max-w-3xl mx-auto px-4 py-12" id="coaches">
     <h2 class="text-2xl font-bold mb-6">師資與經歷</h2>
 
@@ -75,11 +75,13 @@
         </div>
       </div>
 
-      <!-- 影片框 -->
+      <!-- 影片框：預設顯示100.jpg 並與影片同尺寸 -->
       <div class="relative bg-black aspect-video">
+        <img id="coachDefault" src="100.jpg" alt="預設封面"
+             class="w-full h-full object-cover absolute inset-0">
         <iframe
           id="coachIframe"
-          class="w-full h-full hidden"
+          class="w-full h-full hidden absolute inset-0"
           src=""
           title="師資介紹"
           frameborder="0"
@@ -87,13 +89,6 @@
           allowfullscreen
           referrerpolicy="strict-origin-when-cross-origin">
         </iframe>
-
-        <!-- 未選擇占位圖：100.jpg -->
-        <div id="coachPlaceholder" class="absolute inset-0 flex flex-col items-center justify-center gap-3 text-center px-4">
-          <img src="100.jpg" alt="師資占位圖" class="w-40 h-24 object-cover rounded-lg opacity-80 hidden sm:block">
-          <p class="text-white/90 text-lg font-semibold">尚未選擇教練或此教練影片尚未上傳</p>
-          <p class="text-white/70 text-sm">請於上方選擇教練名稱即可播放對應影片</p>
-        </div>
       </div>
 
       <div class="p-4 text-sm text-gray-600">
@@ -102,7 +97,7 @@
     </div>
 
     <script>
-      // 教練 → 影片連結設定 你可隨時替換為 youtube-nocookie.com 的 embed 連結
+      // 教練 → 影片連結設定
       const coachVideos = {
         "孫總": "",
         "羅志峰教練": "https://www.youtube-nocookie.com/embed/r1KgVllEFL8?rel=0&modestbranding=1",
@@ -113,18 +108,18 @@
 
       const coachSelect = document.getElementById('coachSelect');
       const coachIframe = document.getElementById('coachIframe');
-      const coachPlaceholder = document.getElementById('coachPlaceholder');
+      const coachDefault = document.getElementById('coachDefault');
 
       function showCoachVideo(name) {
         const url = coachVideos[name] || "";
         if (url) {
           coachIframe.src = url;
           coachIframe.classList.remove('hidden');
-          coachPlaceholder.classList.add('hidden');
+          coachDefault.classList.add('hidden');
         } else {
           coachIframe.src = "";
           coachIframe.classList.add('hidden');
-          coachPlaceholder.classList.remove('hidden');
+          coachDefault.classList.remove('hidden');
         }
       }
 
@@ -154,10 +149,7 @@
       <!-- 2) 金牌教練團 影片 -->
       <figure class="card overflow-hidden bg-black">
         <div class="relative aspect-video">
-          <video
-            src="video_coaches.mp4"
-            poster="102.jpg"
-            muted controls playsinline preload="metadata"></video>
+          <video src="video_coaches.mp4" poster="102.jpg" muted controls playsinline preload="metadata"></video>
           <button class="playhint" aria-label="播放或暫停"
             onclick="const v=this.previousElementSibling; if(v.paused){v.play();}else{v.pause();}">
             <span>點擊播放 暫停</span>
@@ -184,7 +176,7 @@
     </div>
   </section>
 
-  <!-- 分館介紹 三館皆影片 文字不變 -->
+  <!-- 分館介紹 三館影片 文字不變 -->
   <section class="max-w-7xl mx-auto px-4 py-12" id="branches">
     <h2 class="text-2xl font-bold mb-6">分館介紹</h2>
     <div class="grid md:grid-cols-3 gap-6">
@@ -200,7 +192,7 @@
         <div class="p-6">
           <h3 class="font-bold">崇武道館 總館</h3>
           <p class="mt-2 text-gray-600">核心訓練中心 品勢 對練 幼兒 初級進階</p>
-          <div class="mt-3 text-sm text-gray-500">地址 電話 LINE 請替換</div>
+          <div class="mt-3 text-sm text-gray-500">地址 電話 LINE 諮詢請替換</div>
         </div>
       </article>
 
@@ -216,7 +208,7 @@
         <div class="p-6">
           <h3 class="font-bold">TDS 分館</h3>
           <p class="mt-2 text-gray-600">自由品勢 公品 跆舞專門訓練</p>
-          <div class="mt-3 text-sm text-gray-500">地址 電話 LINE 請替換</div>
+          <div class="mt-3 text-sm text-gray-500">地址 電話 LINE 諮詢請替換</div>
         </div>
       </article>
 
